--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,26 @@ button{
   border: 2px;
   margin: 2px;
   padding: 2px;
-  background-color: #f9ee82;
+  background-color: black;
 }
 .radio{
   font-weight: bolder;
   color: #fffe00;
   font-size: 20px;
+}
+
+#python {
+  display: none;
+}
+#ruby {
+  display: none;
+}
+#javascript {
+  display: none;
+}
+
+#output{
+  font-size: 25px;
+  color: #fffe00;
+  
 }
