--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,14 @@ body{
   font-weight: bolder;
   color: #fffe00;
   font-size: 20px:
+
+
+}
+label{
+  border: 2px;
+  margin: 2px;
+  padding: 2px;
+  background-color: black;
 }
 h5{
   font-weight: bolder;
@@ -16,6 +24,7 @@ h1{
   font-weight: bolder;
   color: #fffe00;
   font-size: 30px;
+  background-color: black;
 }
 
 button{
@@ -23,12 +32,9 @@ button{
   margin: 2px;
   padding: 2px;
   background-color: black;
-}
-.radio{
-  font-weight: bolder;
   color: #fffe00;
-  font-size: 20px;
 }
+
 
 #python {
   display: none;
@@ -39,9 +45,14 @@ button{
 #javascript {
   display: none;
 }
+#retake{
+  display: none;
+}
 
-#output{
+.output{
   font-size: 25px;
   color: #fffe00;
-  
+  background-color: black;
+  /* padding: 2px; */
+  margin: 6px;
 }
